the usual suspects (#736)
* th usual suspects

* revert

Co-authored-by: Jan-Olav Eide <jan-olav.eide@nav.no>